--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
+    "resend": "^6.1.2",
     "socket.io": "^4.8.1"
   }
 }
