--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
