--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
     "resend": "^6.1.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "validator": "^13.15.15"
   }
 }
